--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -650,7 +650,7 @@ svg .cls-101 {
   bottom: 0px;
 }
 .gt-instr-box .gt-instr {
-  font-family: "segoesc-regular";
+  /*font-family: "segoesc-regular";*/
 }
 .gt-button-next {
   position: absolute;
@@ -691,6 +691,7 @@ svg .cls-101 {
 }
 .gt-instr-box[halign="right"][valign="top"] {
   margin-top: -15px;
+  padding-left: 10px;
 }
 .gt-instr-box[halign="left"][valign="top"] {
   margin-top: -15px;
@@ -701,7 +702,7 @@ svg .cls-101 {
   margin-left: 60px;
 }
 .gt-instr-box[halign="left"][valign="bottom"] {
-  margin-top: 35px;
+  margin-top: 95px;
   margin-left: -250px;
 }
 
