--- a/assets/css/activity.css
+++ b/assets/css/activity.css
@@ -22,7 +22,10 @@
   border: 2px solid var(--theme-pri-color);
   border-radius: 50%;
   z-index: 5;
+  left: -18px;
+  top: -16px;
 }
+/*
 #eagleSet_mc {
   left: 40px;
   top: 40px;
@@ -43,6 +46,7 @@
   left: 40px;
   top: 440px;
 }
+*/
 
 .eaglePix_sym {
   width: 65px;
@@ -146,7 +150,7 @@
   /* width: 350px; */
   height: 48px;
   padding: 10px 20px 10px 60px;
-  overflow: hidden;
+  /*overflow: hidden;*/
   background-color: #fff;
   border: 2px solid var(--theme-pri-color);
   border-radius: 5px;
@@ -320,14 +324,14 @@
 
 .ques_cont {
   width: 100%;
-  height: 100px;
+  /*height: 100px;*/
   position: relative;
 }
 
 .ques_content {
   float: left;
   width: 58%;
-  height: 97px;
+  /*height: 97px;*/
   /* background-color: #eff9e5; */
   background-color: var(--theme-sec-background);
   position: relative;
@@ -340,13 +344,14 @@
 .qtn_txt {
   font-size: 20px;
   padding-bottom: 10px;
+  font-style: italic;
 }
 .ans_content {
   float: left;
   width: 42%;
-  height: 97px;
+  /*height: 97px;*/
   position: relative;
-  padding: 30px 10px;
+  /*padding: 30px 10px;*/
   background-color: #fff;
   border-top: 2px solid #4b4b4b;
   border-right: 2px solid #4b4b4b;
@@ -618,6 +623,7 @@ input[type="number"] {
   padding-top: 5px;
   padding-bottom: 5px;
   padding-left: 18px;
+  font-style: italic;
 }
 .exprs_txt div {
   padding-left: 6px;
@@ -660,10 +666,10 @@ input[type="number"] {
 }
 
 .popup_inst {
-  z-index: 20;
+  /*z-index: 20;
   top: 0px;
   left: 0px;
-  margin-bottom: 48px;
+  margin-bottom: 48px;*/
 }
 .popup_inst .eaglePix {
   width: 50px;
@@ -841,7 +847,7 @@ input[type="number"] {
 .Explain_mc_birdrow{
   /*display: flex;*/
   margin: 0 !important;
-  padding-top: 100px;
+  /*padding-top: 100px;*/
 }
 .Explain_mc_birdrow .colbird{
   padding: 30px;
