Changes for Tablet design.

--- a/assets/css/device.css
+++ b/assets/css/device.css
@@ -167,25 +167,27 @@
     overflow: auto;
   }
   .btn-theme-wrap {
-    position: absolute;
+    /*position: absolute;
     left: 0px;
     top: 10px;
     right: auto;
-    z-index: 3;
+    z-index: 3;*/
+    top: 3px;
   }
   .instruction_cont {
-    padding: 5px 10px !important;
-    font-size: 14px !important;
+    padding: 5px 10px;
+    font-size: 14px;
+    padding-right: 50px;
   }
 
   .quiz_cont {
-    padding: 0px 10px !important;
+    padding: 0px 20px !important;
     /* top: unset !important;
     left: unset !important;
     transform: unset !important; */
   }
   .quiz_cont_inner {
-    height: 240px !important;
+    /*height: 240px !important;*/
   }
   .config_cont {
     margin-bottom: 30px !important;
@@ -204,7 +206,7 @@
   }
   .ques_cont {
     width: 100%;
-    height: 80px !important;
+    /*height: 80px !important;*/
     position: relative;
   }
   .ques_content {
@@ -239,15 +241,15 @@
   }
 
   #set_mc {
-    padding: 0px 30px 0px 30px;
+    /*padding: 0px 30px 0px 30px;*/
     width: 100%;
     position: relative;
-    height: 100%;
-    min-height: 500px;
+    /*height: 100%;
+    min-height: 500px;*/
     overflow: auto;
-    display: flex;
+    /*display: flex;
     flex-direction: column;
-    justify-content: space-evenly;
+    justify-content: space-evenly;*/
     width: max-content;
     /*top: 0% !important;
     left: 50% !important;
@@ -260,10 +262,10 @@
     padding: 13px 10px 5px 50px !important;
   }
   .btn_themes {
-    background-image: url(../images/theme-icon-outline-left.svg);
+    /*background-image: url(../images/theme-icon-outline-left.svg);
     background-repeat: no-repeat;
     background-size: 86px 44px;
-    background-position: -44px 0px;
+    background-position: -44px 0px;*/
   }
   /* .exp_body_content{
         height: 100% !important;
@@ -289,7 +291,7 @@
     width: 100%;
   }
   .footer-menu-container div.btn-wrap{
-    float: right;
+    /*float: right;*/
   }
   .Explain_mc_birdrow{
     padding-top: 0px !important;
@@ -364,13 +366,6 @@
     padding: 13px 10px 13px 16px;
 }
 }
-
-@media only screen and (min-width: 990px) {
-  .quiz_cont_inner{
-    margin-top: 100px;
-  }
-}
-
 @media screen and (orientation: landscape) and (max-device-height: 610px) {
   .launch .exp_header .title{
     padding: 0.5em 0.5em 0.1em 0.5em !important;
@@ -382,4 +377,9 @@
     top: 20px !important;
     left: auto !important;
   }*/
+}
+@media screen and (orientation: landscape){
+  #split-0, #split-1 {
+    float: left;
+  }
 }
