--- a/assets/css/landing-page.css
+++ b/assets/css/landing-page.css
@@ -1,7 +1,21 @@
+html,body{
+    touch-action: pan-x pan-y;
+}
 html{
     position: fixed;
     width: 100%;
     height: 100%;
+    -webkit-text-size-adjust: none;
+    -webkit-overflow-scrolling: auto;
+    overflow: auto;
+}
+section.main-section{
+    position: fixed;
+    width: 100%;
+    height: 100%;
+    display: block;
+    -webkit-overflow-scrolling: auto;
+    overflow: auto;
 }
 body {
     font-family: 'Montserrat-Regular';
@@ -11,10 +25,14 @@ body {
     width: 100%;
     height: 100%;
     background: padding-box var(--body-background);
-    overscroll-behavior-y: contain;
+    /*overscroll-behavior-y: contain;
+    touch-action: pan-y pan-x; */
+    -webkit-overflow-scrolling: auto;
+    overflow: auto;
 }
-body[platform="ios"]{
-    
+.bodyWrapper{
+    display: flex;
+    height: 100%;
 }
 .bold {
     font-family: 'Montserrat-Bold';
@@ -54,6 +72,9 @@ body[platform="ios"]{
     height: 100%;
 }
 
+.popup{
+    touch-action: pan-x pan-y;
+}
 
 /* launch Screen*/
 .launch .exp_header {
@@ -177,7 +198,7 @@ body[platform="ios"]{
         background-repeat: no-repeat;
         background-position: 0px -148px;
         background-size: 1024px;
-        width: 1024px;
+        width: 100%;
         height: 311px;
         position: absolute;
         left: 0;
@@ -369,5 +390,4 @@ body[platform="ios"]{
     .small-height-landscape[device="tablet"] .titlemobilelandscape{
         display: block !important;
     }
-    
 }
