--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -100,6 +100,8 @@
 .container-so.main .exp_header .header .rightpan {
   margin-left: 1em;
   display: table;
+  display: flex;
+  align-items: center;
 }
 .container-so.main .exp_header .header .main-src-logo{
   width: 96px;
@@ -215,6 +217,7 @@ div.btn-theme-wrap .btn_themes {
 .wrapper[device="mobile"] .popup {
   height: 100%;
 }
+
 .mobileview .settingsCol .row .col-lg-3.col-md-3.col-sm-12 {
   width: 100% !important;
 }
@@ -279,6 +282,7 @@ div.btn-theme-wrap .btn_themes {
   z-index: 4;
   outline: 1px solid var(--theme-popup-border);
 }
+
 .cust-popup.settings {
   display: block;
 }
@@ -443,7 +447,6 @@ svg .cls-101{fill:none;stroke:var(--theme-pri-text-color);stroke-linecap:round;s
   position: absolute;
   color: var(--theme-pri-text-color);
   z-index: 1001;
-  font-style: italic;
   font-size: 14px;
   width: 250px;
 }
@@ -648,4 +651,8 @@ svg .cls-101{fill:none;stroke:var(--theme-pri-text-color);stroke-linecap:round;s
 }
 .exp_body_content {
   position: relative;
+}
+
+.zoom1, .zoom2{
+  transform-origin: left top;
 }
