--- a/assets/css/device.css
+++ b/assets/css/device.css
@@ -49,7 +49,7 @@
 }
 @media only screen and (min-width: 560px) {
   .col-sm-12 {
-    width: 50%;
+    width: auto;
   }
   .container-so.main .exp_header .header {
     display: block;
@@ -309,9 +309,9 @@
     padding-top: 10px !important;
   }
   .btn_skip_gt{
-    right: 20px !important;
+    /*right: 20px !important;
     top: 20px !important;
-    left: auto !important;
+    left: auto !important;*/
   }
 
 }
