--- a/assets/css/activity.css
+++ b/assets/css/activity.css
@@ -640,7 +640,7 @@ input[type="number"] {
   margin-top: 120px;
   width: 150px;
 }
-
+/*
 .exprs_txt {
   display: flex;
   text-align: center;
@@ -686,6 +686,16 @@ input[type="number"] {
 .answer_txt div {
   padding-left: 6px;
   padding-right: 6px;
+}
+*/
+
+table.centertable{
+  margin: auto;
+  font-family: "Montserrat-Bold";
+}
+table.centertable tr td {
+  padding: 5px;
+  text-align: center;
 }
 
 .btn_close {
